# Lumen

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  EXAMPLES.md  LICENSE  README.md  SPEC.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: correctness.py  token_efficiency.py
benchmarks/python_equivalents/: 02_function.py  03_email_read.py  04_payment.py  05_inbox_agent.py  06_pipeline_errors.py  07_resolution.py  08_cli_wrap.py  09_semantic_search.py  10_webhook_approval.py  11_undo.py  12_morning_brief.py  13_money.py  14_constants.py  15_scheduled_agent.py
docs/: agent_prompt.md  errors.md  manual.md  patterns.md  pitfalls.md
docs/tests/: docs_completeness.py
examples/: 01_hello.lumen  04_payment.lumen  07_resolution.lumen  09_semantic_search.lumen  10_webhook_approval.lumen  11_undo.lumen  13_money.lumen  15_scheduled_agent.lumen  README.md
examples/canonical/: 02_function.lumen  03_email_read.lumen  05_inbox_agent.lumen  06_pipeline_errors.lumen  08_cli_wrap.lumen  12_morning_brief.lumen  14_constants.lumen
installer/linux/: Makefile  README.md  build.py  build.sh
installer/windows/: README.md  build.py
lumen/: __init__.py  cli.py
lumen/compiler/: __init__.py  ast_nodes.py  audit_injector.py  cap_checker.py  grammar.lark  lexer.py  mode_detector.py  parser.py  pipeline.py  resolver.py  rev_checker.py  typechecker.py
lumen/runtime/: __init__.py  (+7 more)
progress/: track-a.md  track-b.md  track-c.md  track-d.md
scripts/: regenerate_parser_fixtures.py
tests/: conftest.py  test_cli.py  test_docs_completeness.py
(+361 files in other folders)
