[tool.poetry]
name = "lumen-lang"
version = "0.1.0"
description = "Lumen — lenguaje de programación con modos fast/safe/flow"
authors = ["Lumen Project"]
readme = "README.md"
packages = [{include = "lumen"}]

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1"
pydantic = "^2.0"
typer = {extras = ["all"], version = "^0.12"}
structlog = "^24.0"
fastapi = "^0.110"
httpx = "^0.27"
uvicorn = {extras = ["standard"], version = "^0.29"}
toml = "^0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.23"
mypy = "^1.0"
ruff = "^0.4"
black = "^24.0"
pre-commit = "^3.0"
pyinstaller = "^6.0"

[tool.poetry.group.stdlib.dependencies]
sentence-transformers = "^3.0"
spacy = "^3.7"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
lumen = "lumen.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
exclude = ["installer/", "tests/benchmarks/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["lumen"]
omit = ["tests/*", "installer/*"]
